DECtalk source code archive/tools/tools/parsers/ItReplaceRulesParser/ruleparse.output
Terminals which are not used

   REPLACE
   SCHNIPP
   INTEGER
   LBRAK
   RBRAK
   '-'


Grammar

    0 $accept: STATEMENT $end

    1 STATEMENT: RULE
    2          | STATEMENT RULE

    3 @1: /* empty */

    4 RULE: SETDECLARE @1 ';'

    5 @2: /* empty */

    6 RULE: REPLACEMENT @2 ';'
    7     | COMMENTLINE

    8 @3: /* empty */

    9 SETDECLARE: SETSOUNDSET NAME '=' @3 '[' SYMLIST ']'

   10 SYMLIST: MORPH
   11        | NAME

   12 @4: /* empty */

   13 SYMLIST: MORPH @4 ',' SYMLIST

   14 @5: /* empty */

   15 SYMLIST: NAME @5 ',' SYMLIST

   16 @6: /* empty */

   17 REPLACEMENT: MORPH '>' MORPH @6 '/' ENVIRON
   18            | MORPH '>' MORPH

   19 @7: /* empty */

   20 REPLACEMENT: MORPH '>' NIL @7 '/' ENVIRON
   21            | MORPH '>' NIL

   22 @8: /* empty */

   23 REPLACEMENT: NIL '>' MORPH @8 '/' ENVIRON

   24 ENVIRON: ALWAYS

   25 @9: /* empty */

   26 @10: /* empty */

   27 @11: /* empty */

   28 ENVIRON: @9 ENV @10 '_' @11 ENV

   29 ENV: '.'

   30 @12: /* empty */

   31 ENV: @12 ENVLIST

   32 @13: /* empty */

   33 @14: /* empty */

   34 ENV: '{' @13 ENVLIST @14 '}'

   35 @15: /* empty */

   36 ENVLIST: @15 SEQ

   37 @16: /* empty */

   38 ENVLIST: ENVLIST '|' @16 SEQ

   39 SEQ: SYMB
   40    | SYMB '+' SEQ

   41 SYMB: NAME
   42     | MORPH

   43 ALWAYS: '0'


Terminals, with rules where they appear

$end (0) 0
'+' (43) 40
',' (44) 13 15
'-' (45)
'.' (46) 29
'/' (47) 17 20 23
'0' (48) 43
';' (59) 4 6
'=' (61) 9
'>' (62) 17 18 20 21 23
'[' (91) 9
']' (93) 9
'_' (95) 28
'{' (123) 34
'|' (124) 38
'}' (125) 34
error (256)
SETSOUNDSET (258) 9
REPLACE (259)
NAME (260) 9 11 15 41
COMMENTLINE (261) 7
MORPH (262) 10 13 17 18 20 21 23 42
NIL (263) 20 21 23
SCHNIPP (264)
INTEGER (265)
LBRAK (266)
RBRAK (267)


Nonterminals, with rules where they appear

$accept (28)
    on left: 0
STATEMENT (29)
    on left: 1 2, on right: 0 2
RULE (30)
    on left: 4 6 7, on right: 1 2
@1 (31)
    on left: 3, on right: 4
@2 (32)
    on left: 5, on right: 6
SETDECLARE (33)
    on left: 9, on right: 4
@3 (34)
    on left: 8, on right: 9
SYMLIST (35)
    on left: 10 11 13 15, on right: 9 13 15
@4 (36)
    on left: 12, on right: 13
@5 (37)
    on left: 14, on right: 15
REPLACEMENT (38)
    on left: 17 18 20 21 23, on right: 6
@6 (39)
    on left: 16, on right: 17
@7 (40)
    on left: 19, on right: 20
@8 (41)
    on left: 22, on right: 23
ENVIRON (42)
    on left: 24 28, on right: 17 20 23
@9 (43)
    on left: 25, on right: 28
@10 (44)
    on left: 26, on right: 28
@11 (45)
    on left: 27, on right: 28
ENV (46)
    on left: 29 31 34, on right: 28
@12 (47)
    on left: 30, on right: 31
@13 (48)
    on left: 32, on right: 34
@14 (49)
    on left: 33, on right: 34
ENVLIST (50)
    on left: 36 38, on right: 31 34 38
@15 (51)
    on left: 35, on right: 36
@16 (52)
    on left: 37, on right: 38
SEQ (53)
    on left: 39 40, on right: 36 38 40
SYMB (54)
    on left: 41 42, on right: 39 40
ALWAYS (55)
    on left: 43, on right: 24


state 0

    0 $accept: . STATEMENT $end

    SETSOUNDSET  shift, and go to state 1
    COMMENTLINE  shift, and go to state 2
    MORPH        shift, and go to state 3
    NIL          shift, and go to state 4

    STATEMENT    go to state 5
    RULE         go to state 6
    SETDECLARE   go to state 7
    REPLACEMENT  go to state 8


state 1

    9 SETDECLARE: SETSOUNDSET . NAME '=' @3 '[' SYMLIST ']'

    NAME  shift, and go to state 9


state 2

    7 RULE: COMMENTLINE .

    $default  reduce using rule 7 (RULE)


state 3

   17 REPLACEMENT: MORPH . '>' MORPH @6 '/' ENVIRON
   18            | MORPH . '>' MORPH
   20            | MORPH . '>' NIL @7 '/' ENVIRON
   21            | MORPH . '>' NIL

    '>'  shift, and go to state 10


state 4

   23 REPLACEMENT: NIL . '>' MORPH @8 '/' ENVIRON

    '>'  shift, and go to state 11


state 5

    0 $accept: STATEMENT . $end
    2 STATEMENT: STATEMENT . RULE

    $end         shift, and go to state 12
    SETSOUNDSET  shift, and go to state 1
    COMMENTLINE  shift, and go to state 2
    MORPH        shift, and go to state 3
    NIL          shift, and go to state 4

    RULE         go to state 13
    SETDECLARE   go to state 7
    REPLACEMENT  go to state 8


state 6

    1 STATEMENT: RULE .

    $default  reduce using rule 1 (STATEMENT)


state 7

    4 RULE: SETDECLARE . @1 ';'

    $default  reduce using rule 3 (@1)

    @1  go to state 14


state 8

    6 RULE: REPLACEMENT . @2 ';'

    $default  reduce using rule 5 (@2)

    @2  go to state 15


state 9

    9 SETDECLARE: SETSOUNDSET NAME . '=' @3 '[' SYMLIST ']'

    '='  shift, and go to state 16


state 10

   17 REPLACEMENT: MORPH '>' . MORPH @6 '/' ENVIRON
   18            | MORPH '>' . MORPH
   20            | MORPH '>' . NIL @7 '/' ENVIRON
   21            | MORPH '>' . NIL

    MORPH  shift, and go to state 17
    NIL    shift, and go to state 18


state 11

   23 REPLACEMENT: NIL '>' . MORPH @8 '/' ENVIRON

    MORPH  shift, and go to state 19


state 12

    0 $accept: STATEMENT $end .

    $default  accept


state 13

    2 STATEMENT: STATEMENT RULE .

    $default  reduce using rule 2 (STATEMENT)


state 14

    4 RULE: SETDECLARE @1 . ';'

    ';'  shift, and go to state 20


state 15

    6 RULE: REPLACEMENT @2 . ';'

    ';'  shift, and go to state 21


state 16

    9 SETDECLARE: SETSOUNDSET NAME '=' . @3 '[' SYMLIST ']'

    $default  reduce using rule 8 (@3)

    @3  go to state 22


state 17

   17 REPLACEMENT: MORPH '>' MORPH . @6 '/' ENVIRON
   18            | MORPH '>' MORPH .

    ';'       reduce using rule 18 (REPLACEMENT)
    $default  reduce using rule 16 (@6)

    @6  go to state 23


state 18

   20 REPLACEMENT: MORPH '>' NIL . @7 '/' ENVIRON
   21            | MORPH '>' NIL .

    ';'       reduce using rule 21 (REPLACEMENT)
    $default  reduce using rule 19 (@7)

    @7  go to state 24


state 19

   23 REPLACEMENT: NIL '>' MORPH . @8 '/' ENVIRON

    $default  reduce using rule 22 (@8)

    @8  go to state 25


state 20

    4 RULE: SETDECLARE @1 ';' .

    $default  reduce using rule 4 (RULE)


state 21

    6 RULE: REPLACEMENT @2 ';' .

    $default  reduce using rule 6 (RULE)


state 22

    9 SETDECLARE: SETSOUNDSET NAME '=' @3 . '[' SYMLIST ']'

    '['  shift, and go to state 26


state 23

   17 REPLACEMENT: MORPH '>' MORPH @6 . '/' ENVIRON

    '/'  shift, and go to state 27


state 24

   20 REPLACEMENT: MORPH '>' NIL @7 . '/' ENVIRON

    '/'  shift, and go to state 28


state 25

   23 REPLACEMENT: NIL '>' MORPH @8 . '/' ENVIRON

    '/'  shift, and go to state 29


state 26

    9 SETDECLARE: SETSOUNDSET NAME '=' @3 '[' . SYMLIST ']'

    NAME   shift, and go to state 30
    MORPH  shift, and go to state 31

    SYMLIST  go to state 32


state 27

   17 REPLACEMENT: MORPH '>' MORPH @6 '/' . ENVIRON

    '0'  shift, and go to state 33

    $default  reduce using rule 25 (@9)

    ENVIRON  go to state 34
    @9       go to state 35
    ALWAYS   go to state 36


state 28

   20 REPLACEMENT: MORPH '>' NIL @7 '/' . ENVIRON

    '0'  shift, and go to state 33

    $default  reduce using rule 25 (@9)

    ENVIRON  go to state 37
    @9       go to state 35
    ALWAYS   go to state 36


state 29

   23 REPLACEMENT: NIL '>' MORPH @8 '/' . ENVIRON

    '0'  shift, and go to state 33

    $default  reduce using rule 25 (@9)

    ENVIRON  go to state 38
    @9       go to state 35
    ALWAYS   go to state 36


state 30

   11 SYMLIST: NAME .
   15        | NAME . @5 ',' SYMLIST

    ','       reduce using rule 14 (@5)
    $default  reduce using rule 11 (SYMLIST)

    @5  go to state 39


state 31

   10 SYMLIST: MORPH .
   13        | MORPH . @4 ',' SYMLIST

    ','       reduce using rule 12 (@4)
    $default  reduce using rule 10 (SYMLIST)

    @4  go to state 40


state 32

    9 SETDECLARE: SETSOUNDSET NAME '=' @3 '[' SYMLIST . ']'

    ']'  shift, and go to state 41


state 33

   43 ALWAYS: '0' .

    $default  reduce using rule 43 (ALWAYS)


state 34

   17 REPLACEMENT: MORPH '>' MORPH @6 '/' ENVIRON .

    $default  reduce using rule 17 (REPLACEMENT)


state 35

   28 ENVIRON: @9 . ENV @10 '_' @11 ENV

    '.'  shift, and go to state 42
    '{'  shift, and go to state 43

    $default  reduce using rule 30 (@12)

    ENV  go to state 44
    @12  go to state 45


state 36

   24 ENVIRON: ALWAYS .

    $default  reduce using rule 24 (ENVIRON)


state 37

   20 REPLACEMENT: MORPH '>' NIL @7 '/' ENVIRON .

    $default  reduce using rule 20 (REPLACEMENT)


state 38

   23 REPLACEMENT: NIL '>' MORPH @8 '/' ENVIRON .

    $default  reduce using rule 23 (REPLACEMENT)


state 39

   15 SYMLIST: NAME @5 . ',' SYMLIST

    ','  shift, and go to state 46


state 40

   13 SYMLIST: MORPH @4 . ',' SYMLIST

    ','  shift, and go to state 47


state 41

    9 SETDECLARE: SETSOUNDSET NAME '=' @3 '[' SYMLIST ']' .

    $default  reduce using rule 9 (SETDECLARE)


state 42

   29 ENV: '.' .

    $default  reduce using rule 29 (ENV)


state 43

   34 ENV: '{' . @13 ENVLIST @14 '}'

    $default  reduce using rule 32 (@13)

    @13  go to state 48


state 44

   28 ENVIRON: @9 ENV . @10 '_' @11 ENV

    $default  reduce using rule 26 (@10)

    @10  go to state 49


state 45

   31 ENV: @12 . ENVLIST

    $default  reduce using rule 35 (@15)

    ENVLIST  go to state 50
    @15      go to state 51


state 46

   15 SYMLIST: NAME @5 ',' . SYMLIST

    NAME   shift, and go to state 30
    MORPH  shift, and go to state 31

    SYMLIST  go to state 52


state 47

   13 SYMLIST: MORPH @4 ',' . SYMLIST

    NAME   shift, and go to state 30
    MORPH  shift, and go to state 31

    SYMLIST  go to state 53


state 48

   34 ENV: '{' @13 . ENVLIST @14 '}'

    $default  reduce using rule 35 (@15)

    ENVLIST  go to state 54
    @15      go to state 51


state 49

   28 ENVIRON: @9 ENV @10 . '_' @11 ENV

    '_'  shift, and go to state 55


state 50

   31 ENV: @12 ENVLIST .
   38 ENVLIST: ENVLIST . '|' @16 SEQ

    '|'  shift, and go to state 56

    $default  reduce using rule 31 (ENV)


state 51

   36 ENVLIST: @15 . SEQ

    NAME   shift, and go to state 57
    MORPH  shift, and go to state 58

    SEQ   go to state 59
    SYMB  go to state 60


state 52

   15 SYMLIST: NAME @5 ',' SYMLIST .

    $default  reduce using rule 15 (SYMLIST)


state 53

   13 SYMLIST: MORPH @4 ',' SYMLIST .

    $default  reduce using rule 13 (SYMLIST)


state 54

   34 ENV: '{' @13 ENVLIST . @14 '}'
   38 ENVLIST: ENVLIST . '|' @16 SEQ

    '|'  shift, and go to state 56

    $default  reduce using rule 33 (@14)

    @14  go to state 61


state 55

   28 ENVIRON: @9 ENV @10 '_' . @11 ENV

    $default  reduce using rule 27 (@11)

    @11  go to state 62


state 56

   38 ENVLIST: ENVLIST '|' . @16 SEQ

    $default  reduce using rule 37 (@16)

    @16  go to state 63


state 57

   41 SYMB: NAME .

    $default  reduce using rule 41 (SYMB)


state 58

   42 SYMB: MORPH .

    $default  reduce using rule 42 (SYMB)


state 59

   36 ENVLIST: @15 SEQ .

    $default  reduce using rule 36 (ENVLIST)


state 60

   39 SEQ: SYMB .
   40    | SYMB . '+' SEQ

    '+'  shift, and go to state 64

    $default  reduce using rule 39 (SEQ)


state 61

   34 ENV: '{' @13 ENVLIST @14 . '}'

    '}'  shift, and go to state 65


state 62

   28 ENVIRON: @9 ENV @10 '_' @11 . ENV

    '.'  shift, and go to state 42
    '{'  shift, and go to state 43

    $default  reduce using rule 30 (@12)

    ENV  go to state 66
    @12  go to state 45


state 63

   38 ENVLIST: ENVLIST '|' @16 . SEQ

    NAME   shift, and go to state 57
    MORPH  shift, and go to state 58

    SEQ   go to state 67
    SYMB  go to state 60


state 64

   40 SEQ: SYMB '+' . SEQ

    NAME   shift, and go to state 57
    MORPH  shift, and go to state 58

    SEQ   go to state 68
    SYMB  go to state 60


state 65

   34 ENV: '{' @13 ENVLIST @14 '}' .

    $default  reduce using rule 34 (ENV)


state 66

   28 ENVIRON: @9 ENV @10 '_' @11 ENV .

    $default  reduce using rule 28 (ENVIRON)


state 67

   38 ENVLIST: ENVLIST '|' @16 SEQ .

    $default  reduce using rule 38 (ENVLIST)


state 68

   40 SEQ: SYMB '+' SEQ .

    $default  reduce using rule 40 (SEQ)
